# Photobooth_IPH

./: .gitignore  .impeccable.md  AUTO_ATTACH_CAMERAS.md  CLAUDE.md  CODE_QUALITY_REVIEW.md  FFMPEG_LIVEVIEW_IMPLEMENTATION.md  HDMI_MJPEG_STREAM_PLAN.md  IMPLEMENTATION_PROGRESS.md  LICENSE  README.md  config.json  copy-splash.mjs  fuji debug.json  guest-display.html  index.html  package-lock.json  package.json  splash.html  tmpclaude-32a0-cwd  widget.json
photobooth-camera-daemon/: API_QUICK_REFERENCE.md  Cargo.toml  HOWTOBUILD.md  Linux README.md  VM_BUILD_GUIDE.md
photobooth-camera-daemon/configs/: README.md  setup-buildroot.sh
photobooth-camera-daemon/configs/buildroot-board-files/: init  photobooth_defconfig
photobooth-camera-daemon/gphoto2-wrapper/: camera-brand.c  camera-brand.h  gphoto2-controller.c  gphoto2-wrapper.c
photobooth-camera-daemon/gphoto2-wrapper/common/: camera-brand.c  camera-brand.h  file_utils.c  file_utils.h  widget_ops.c  widget_ops.h
photobooth-camera-daemon/gphoto2-wrapper/controller/: camera_capture.c  camera_capture.h  camera_config.c  camera_config.h  camera_filemgmt.c  camera_filemgmt.h  camera_open.c  camera_open.h  camera_preview.c  camera_preview.h  camera_storage.c  camera_storage.h  streaming.c  streaming.h
photobooth-camera-daemon/gphoto2-wrapper/include/: gphoto2-common.h  gphoto2-storage.h  gphoto2-usb.h
photobooth-camera-daemon/gphoto2-wrapper/wrapper/: wrapper_capture.c  wrapper_capture.h  wrapper_config.c  wrapper_config.h  wrapper_open.c  wrapper_open.h  wrapper_status.c  wrapper_status.h  wrapper_widgets.c  wrapper_widgets.h
photobooth-camera-daemon/src/: camera.rs  controller.rs  http.rs  main.rs  storage.rs  types.rs  websocket.rs
src-tauri/: .gitignore  .ignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecars/: README.md  setup-ffmpeg.bat
src-tauri/src/: ffmpeg_manager.rs  ffmpeg_sidecar.rs  hdmi_capture.rs  lib.rs  lib.rs.original  main.rs  state.rs  system_requirements.rs  usb_camera.rs  version.rs
src-tauri/src/asset_library/: commands.rs  mod.rs  types.rs
src-tauri/src/backgrounds/: commands.rs  mod.rs  types.rs
src-tauri/templates/: bundle.wxs
src-tauri/tools/: main.wxs
(+428 files in other folders)
