[package]
name = "photobooth-camera-daemon"
version = "1.0.0"
edition = "2021"

[dependencies]
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http-body-util = "0.1"
