[package]
name = "photobooth-camera-daemon"
version = "1.0.0"
edition = "2021"

[dependencies]
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http-body-util = "0.1"
tokio-tungstenite = "0.26"
futures-util = "0.3"
sha1 = "0.10"
base64 = "0.22"
libc = "0.2"
async-stream = "0.3"
