[package]
name = "photobooth-iph"
version = "0.1.0"
description = "A Photobooth application that uploads photos to Google Drive and generates QR codes for easy sharing."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "photobooth_iph_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
qrcode = "0.13"
image = "0.24"
rand = "0.8"
google-drive3 = "5.0"
yup-oauth2 = "9.0"
hyper = "0.14"
hyper-rustls = "0.25"
http = "0.2"
base64 = "0.21"
open = "5.0"
futures = "0.3"
